# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "roguelike"
version = "0.1.0"
authors = ["Wyatt Ades <wyattades@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[profile.dev]
# lto = false 

[profile.release]
# lto = true
# opt-level = 's'
# features = []

[dependencies]
js-sys = "0.3.33"
wasm-bindgen = "0.2.56"
pcg_rand = "0.11.1"
bresenham = "0.1.1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dependencies.rand]
version = "0.7.2"
default-features = false
# features = ['small_rng']
# features = ['stdweb', 'getrandom']

[dependencies.web-sys]
version = "0.3.33"
features = [
  'console',
  # 'CanvasRenderingContext2d',
  # 'CssStyleDeclaration',
  # 'Document',
  # 'Element',
  # 'EventTarget',
  # 'HtmlCanvasElement',
  # 'HtmlElement',
  # 'MouseEvent',
  # 'Node',
  # 'Window',
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]

